# mlflow-practice

./: .gitignore  README.md  main.py  mlflow_utils.py  pyproject.toml  test_predictions.csv  train.py
